--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@
   font-family: minecraftia;
 }
 
+
+
 .bg {
   background-image: var(--background-image);
   background-size: cover;
@@ -103,6 +105,19 @@ border: 1px solid var(--border-color);
   border: 1px solid var(--border-color);
   width: 25%;
 }
+
+
+
+
+/* responsive */
+@media screen and (max-width: 1200px) {
+  .card-r {
+    width: 80%;
+
+  }
+}
+
+
 
 
 
