--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: minecraftia;
-  src:url(../public/fonts/minecraftia.ttf);
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 
 :root {
-  --background-image: url('../public/images/background.gif');
-  --text-color: rgb(181, 44, 34);
-  --border-color: rgba(240, 4, 4, 0.253);
+  --background-image: url('../public/images/background.jpg');
+  --text-color: rgba(185, 185, 185, 0.966);
+  --border-color: rgba(255, 255, 255, 0);
 }
 
 * {
@@ -20,7 +19,7 @@
   box-sizing: border-box;
   overflow-x: hidden;
   overflow-y: auto;
-  font-family: minecraftia;
+  font-family: "Inter", sans-serif;
 }
 
 
@@ -35,20 +34,22 @@
 .card-bg {
   background: rgba(6,6,6,0.25);
 -webkit-backdrop-filter: blur(12px);
-backdrop-filter: blur(10px);
-border-radius: 15px;
+backdrop-filter: blur(1px);
+border-radius: 8px;
 border: 1px solid var(--border-color);
 }
 
 .link-bg{
-  background-color: rgba(0, 0, 0, 0.349);
-  border: 1px solid var(--border-color);
   transition: 1s;
+    font-family: "Inter", sans-serif;
+    filter: drop-shadow(rgba(194, 194, 194, 0.788) 0px 0px 3.5px);
+    /* fill: rgba(255, 255, 255, 0.205); */
 }
 
 .link-bg:hover {
   transition: 1s;
-  background-color: rgba(0, 0, 0, 0.796);
+  filter: drop-shadow(rgb(255, 255, 255) 0px 0px 3.5px);
+
   transform: scale(1.1);
 
 }
@@ -100,7 +101,7 @@ border: 1px solid var(--border-color);
 .volume {
   -webkit-appearance: none;
   border-radius: 50px;
-  accent-color: red;
+  accent-color: var(--text-color);
   background: #1b181886;
   border: 1px solid var(--border-color);
   width: 25%;
@@ -109,7 +110,7 @@ border: 1px solid var(--border-color);
 .progessbar {
   -webkit-appearance: none;
   border-radius: 50px;
-  accent-color: red;
+  accent-color: var(--text-color);
   background: #00000086;
   border: 1px solid var(--border-color);
 }
