--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,46 @@ border: 1px solid var(--border-color);
   }
 }
 
+.bg-5 {
+  background: rgba(6,6,6,0.25);
+-webkit-backdrop-filter: blur(12px);
+backdrop-filter: blur(15px);
+border-radius: 8px;
+border: 1px solid var(--border-color);
+}
+
+
+.zoomIn {
+  -webkit-animation-name: zoomIn;
+  animation-name: zoomIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  }
+  @-webkit-keyframes zoomIn {
+  0% {
+  opacity: 0;
+  -webkit-transform: scale3d(.3, .3, .3);
+  transform: scale3d(.3, .3, .3);
+  }
+  50% {
+  opacity: 1;
+  }
+  }
+  @keyframes zoomIn {
+  0% {
+  opacity: 0;
+  -webkit-transform: scale3d(.3, .3, .3);
+  transform: scale3d(.3, .3, .3);
+  }
+  50% {
+  opacity: 1;
+  }
+  } 
+
+
+
 
 
 
