--- a/src/index.css
+++ b/src/index.css
@@ -28,12 +28,27 @@
 
 }
 
+.bgStaff {
+  background-image: url('../public/images/SkyTemplePaintings.webp');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .bgBlur {
   background: rgba(6,6,6,0.25);
 -webkit-backdrop-filter: blur(12px);
 backdrop-filter: blur(5px);
 border-radius: 8px;
 }
+
+.bgBlur2 {
+  background: rgba(24, 24, 24, 0.075);
+-webkit-backdrop-filter: blur(12px);
+backdrop-filter: blur(2px);
+border-radius: 8px;
+}
+
 
 
 .wavy {
